# sandbox

activeresource_sample/: Gemfile
activeresource_sample/config/: routes.rb
algorithm_study/: binary_search.rb
crystal/hello_world/: hello.cr
crystal/http_server/: server.cr
crystal/overloading/: person.cr
docker/sample-kubernetes-1/: main.go
ec2-ssh-tool-go/: .gitignore  main.go
everyday_rails_syakyo/: .gitignore  Gemfile
everyday_rails_syakyo/spec/: spec_helper.rb
firstruby/: 1-20.rb  6-15.rb  6-3-6.rb  7-11.rb  7-20.rb  7-26.rb  9-10.rb  9-6.rb  hello.rb
go/aws-sdk-go_sample/: main.go
go/comma/: commaOk.go
go/defer/: defer.go  (+1 more)
machine-learning-with-python/: 1-4-3.py  1-7-1.ipynb  1-7-2.ipynb  1-7-3.ipynb  1-7-4.ipynb  1-7-5.ipynb  1-8.ipynb  2-3-1.ipynb  2-3-2-1.ipynb  Untitled.ipynb  jupyter_sample.ipynb
macscript/: dialog.sh
middleman/: Gemfile
padrino_tutorial/: .components  Gemfile
perl-testing-handbook/: cpanfile.snapshot
ppp_graph/: Gemfile  README.md
rails/: .gitignore
rails_tutorial_first_app/: Gemfile
rust/introduction-to-rust-programming/chapter5/todo/: Cargo.toml
rust/introduction-to-rust-programming/chapter5/todo/src/: main.rs
rust/introduction-to-rust-programming/chapter5/todo/templates/: index.html
rust/introduction-to-rust-programming/todo/: .gitignore  Cargo.toml  Dockerfile
rust/introduction-to-rust-programming/todo/src/: main.rs
rust/rusty-journal/: .gitignore  Cargo.toml
rust/rusty-journal/src/: main.rs  tasks.rs
sample_app_rails_4/: Gemfile  README.md
tdd_ex/: Gemfile
volt/: .gitignore
(+878 files in other folders)
